# opencv_pratice

./: CMakeLists.txt
.github/workflows/: ccpp.yml
opencv/: CMakeLists.txt
opencv/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv/lib/: libopencv_calib3d.so.4.1.2  libopencv_flann.so.4.1  libopencv_highgui.so.4.1.2  libopencv_ml.so.4.1.2  libopencv_objdetect.so.4.1  libopencv_stitching.so.4.1  libopencv_video.so.4.1.2  libopencv_videoio.so.4.1
opencv/sample/: 1.cpp  CMakeLists.txt
opencv/sample/b/: CMakeCache.txt  Makefile  cmake_install.cmake
tools/: 1.cpp  CMakeLists.txt
tools/b/: CMakeCache.txt  Makefile  cmake_install.cmake
